--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+section.heroComponent{
+    @apply grid;
+    grid-template-columns: .4fr .6fr;
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"]{
+    @apply border p-2 border-[#90191D] bg-[#FFD7AD];
+    @apply block w-full my-4 rounded-md
+}
+/* input[type="email"]:disabled,
+input[type="password"]:disabled,
+input[type="text"]:disabled{
+    @apply cursor-not-allowed
+
+} */
+
+
+button{
+    @apply block w-full font-semibold;
+    @apply border border-[#90191D] rounded-md px-6 py-2
+}
+button[type="submit"], .submit{
+    @apply border-0 bg-primary text-white;
+}
+
+button[type="submit"]:disabled, .submit:disabled{
+    @apply cursor-not-allowed bg-[#a83a3e];
+}
