--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,15 +10,15 @@ section.heroComponent{
 input[type="email"],
 input[type="password"],
 input[type="text"]{
-    @apply border p-2 border-[#90191D] bg-[#FFD7AD];
+    @apply border p-2 border-[#90191D] bg-[#f7dcbf];
     @apply block w-full my-4 rounded-md
 }
-/* input[type="email"]:disabled,
+input[type="email"]:disabled,
 input[type="password"]:disabled,
 input[type="text"]:disabled{
-    @apply cursor-not-allowed
+    @apply cursor-not-allowed bg-[#f5ca9c]
 
-} */
+} 
 
 
 button{
